@@ -541,6 +541,7 @@ NSLog(@"Callback");
 
   [self setFlagsforEventLoop: hwnd];
  
+NSLog(@"event %u", uMsg);
   switch (uMsg) 
     { 
       case WM_SIZING: 
